[gd_scene load_steps=3 format=3 uid="uid://bdw233li11voo"]

[ext_resource type="Script" path="res://autoloads/pause_menu.gd" id="1_ma3iv"]
[ext_resource type="Theme" uid="uid://c46na1j7c1bq" path="res://menu/theme.tres" id="2_k7txe"]

[node name="PauseMenuLayer" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_ma3iv")

[node name="Fade" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k7txe")
color = Color(0, 0, 0, 0.752941)

[node name="TitleLabel" type="Label" parent="Fade"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="Fade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Fade/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="Fade/VBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="OptionsButton" type="Button" parent="Fade/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="Fade/VBoxContainer"]
layout_mode = 2
text = "Exit to Main Menu"

[connection signal="gui_input" from="Fade" to="." method="_on_fade_gui_input"]
